--- a/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-enterprise/kubernetes-upgrade-tsee/helm.mdx
@@ -64,7 +64,7 @@ These steps differ based on your cluster type. If you are unsure of your cluster
 1. Get the Helm chart
 
    <CodeBlock language='bash'>
-     \{'{variables.version}' === 'master'
+     {'{variables.version}' === 'master'
        ? 'gsutil cp gs://tigera-helm-charts/tigera-operator-v0.0.tgz'
        : 'curl -O -L {variables.downloadsurl}/ee/charts/tigera-operator-{variables.chart_version_name}.tgz'}
    </CodeBlock>
