--- a/calico-enterprise_versioned_docs/version-3.19-1/multicluster/set-up-multi-cluster-management/helm-install/create-a-management-cluster-helm.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/multicluster/set-up-multi-cluster-management/helm-install/create-a-management-cluster-helm.mdx
@@ -37,7 +37,7 @@ In this guide, you install the Tigera Calico operator and custom resource defini
 ### Get the Helm chart
 
   <CodeBlock language='bash'>
-     \{'{variables.version}' === 'master'
+     {'{variables.version}' === 'master'
        ? `helm repo add tigera gs://tigera-helm-charts`
        : `curl -O -L https://downloads.tigera.io/ee/charts/tigera-operator-{variables.chart_version_name}.tgz`}
   </CodeBlock>
