--- a/calico-enterprise_versioned_docs/version-3.19-1/operations/clis/calicoctl/install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.19-1/operations/clis/calicoctl/install.mdx
@@ -59,7 +59,7 @@ Consider navigating to a location that's in your `PATH`. For example, `/usr/loca
 Use the following command to download the `calicoctl` binary.
 
 <CodeBlock language='bash'>
-  \{'{variables.version}' === 'master'
+  {'{variables.version}' === 'master'
     ? `curl -o calicoctl -O -L {variables.filesUrl}/download/binaries/$\{version}/calicoctl`
     : `curl -o calicoctl -O -L {variables.downloadsurl}/ee/binaries/$\{version}/calicoctl`}
 </CodeBlock>
@@ -90,7 +90,7 @@ Consider navigating to a location that's in your `PATH`. For example, `/usr/loca
 Use the following command to download the `calicoctl` binary.
 
 <CodeBlock language='bash'>
-  \{'{variables.version}' === 'master'
+  {'{variables.version}' === 'master'
     ? `curl -o calicoctl -O -L {variables.filesUrl}/download/binaries/$\{version}/calicoctl-darwin-amd64`
     : `curl -o calicoctl -O -L {variables.downloadsurl}/ee/binaries/$\{version}/calicoctl-darwin-amd64`}
 </CodeBlock>
@@ -126,7 +126,7 @@ to a location that's in your `PATH`. For example, `C:\Windows`.
 :::
 
 <CodeBlock language='bash'>
-  \{'{variables.version}' === 'master'
+  {'{variables.version}' === 'master'
     ? `Invoke-WebRequest -Uri "{variables.filesUrl}/download/binaries/$\{version}/calicoctl-windows-amd64.exe" -OutFile "calicoctl.exe"`
     : `Invoke-WebRequest -Uri "{variables.downloadsurl}/ee/binaries/$\{version}/calicoctl-windows-amd64.exe" -OutFile "calicoctl.exe"`}
 </CodeBlock>
@@ -150,7 +150,7 @@ Consider navigating to a location that's in your `PATH`. For example, `/usr/loca
 Use the following command to download the `calicoctl` binary.
 
 <CodeBlock language='bash'>
-  \{'{variables.version}' === 'master'
+  {'{variables.version}' === 'master'
     ? `curl -o kubectl-calico -O -L {variables.filesUrl}/download/binaries/$\{version}/calicoctl`
     : `curl -o kubectl-calico -O -L {variables.downloadsurl}/ee/binaries/$\{version}/calicoctl`}
 </CodeBlock>
@@ -181,7 +181,7 @@ Consider navigating to a location that's in your `PATH`. For example, `/usr/loca
 Use the following command to download the `calicoctl` binary.
 
 <CodeBlock language='bash'>
-  \{'{variables.version}' === 'master'
+  {'{variables.version}' === 'master'
     ? `curl -o kubectl-calico -O -L {variables.filesUrl}/download/binaries/$\{version}/calicoctl-darwin-amd64`
     : `curl -o kubectl-calico -O -L {variables.downloadsurl}/ee/binaries/$\{version}/calicoctl-darwin-amd64`}
 </CodeBlock>
@@ -217,7 +217,7 @@ to a location that's in your `PATH`. For example, `C:\Windows`.
 :::
 
 <CodeBlock language='bash'>
-  \{'{variables.version}' === 'master'
+  {'{variables.version}' === 'master'
     ? `Invoke-WebRequest -Uri "{variables.filesUrl}/download/binaries/$\{version}/calicoctl-windows-amd64.exe" -OutFile "kubectl-calico.exe"`
     : `Invoke-WebRequest -Uri "{variables.downloadsurl}/ee/binaries/$\{version}/calicoctl-windows-amd64.exe" -OutFile "kubectl-calico.exe"`}
 </CodeBlock>
