--- a/calico_versioned_docs/version-3.25/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico_versioned_docs/version-3.25/operations/upgrading/kubernetes-upgrade.mdx
@@ -257,11 +257,11 @@ with the updated version of Dikastes.
 If you have [enabled application layer policy](../../network-policy/istio/app-layer-policy.mdx),
 take the following steps to upgrade the Dikastes sidecars running in your application pods. Skip these steps if you are not using Istio with {variables.prodname}.
 
-1. Update the Istio sidecar injector template to use the new version of Dikastes. Replace `<your Istio version>` below with
+1. Update the Istio sidecar injector template to use the new version of Dikastes. Replace `{'<your Istio version>'}` below with
    the full version string of your Istio install, for example `1.4.2`.
 
    <CodeBlock language='bash'>
-   kubectl apply -f {variables.manifestsUrl}/manifests/alp/istio-inject-configmap-<your Istio version>.yaml
+   kubectl apply -f {variables.manifestsUrl}/manifests/alp/istio-inject-configmap-{'<your Istio version>'}.yaml
    </CodeBlock>
 
 1. Once the new template is in place, newly created pods use the upgraded version of Dikastes. Perform a rolling update of each of your service deployments
