Fixes markdown link in CE-next

--- a/calico-enterprise/reference/component-resources/configuration.mdx
+++ b/calico-enterprise/reference/component-resources/configuration.mdx
@@ -250,7 +250,7 @@ Example CNI config:
 
 The {{prodname}} CNI plugin uses {{prodname}}'s `endpoint-status` directory to determine when the dataplane has been programmed for a pod.
 By default, the {{prodname}} CNI plugin will look for the directory at: `/var/run/calico/endpoint-status`.
-To enable and adjust where {{prodname}} writes `endpoint-status`, the `endpointStatusPathPrefix` option must be configured for [Felix](./felix/configuration.mdx).
+To enable and adjust where {{prodname}} writes `endpoint-status`, the `endpointStatusPathPrefix` option must be configured for [Felix](node/felix/configuration.mdx).
 
 To adjust where the {{prodname}} CNI plugin looks for {{prodname}}'s `endpoint-status` directory, you must set the `endpoint_status_dir` option.
 
