Override version for registry scanner

--- a/calico-cloud/image-assurance/scanners/registry-scanner.mdx
+++ b/calico-cloud/image-assurance/scanners/registry-scanner.mdx
@@ -53,7 +53,7 @@ To deploy the registry scanner as a pod in Kubernetes cluster, we recommend that
 
 ### Download the registry scanner
 
-The registry scanner comes in a Docker image. To get the image, run this command: `docker pull quay.io/tigera/image-assurance-registry-scanner:{{imageassuranceversion}}`.
+The registry scanner comes in a Docker image. To get the image, run this command: `docker pull quay.io/tigera/image-assurance-registry-scanner:v1.15.3`.
 
 ### Set up authentication to registry scanner
 
