Add upgrade considerations for UID, and IP pool migration with operator

--- a/calico/operations/upgrading/openshift-upgrade.mdx
+++ b/calico/operations/upgrading/openshift-upgrade.mdx
@@ -8,7 +8,17 @@ description: Upgrade to a newer version of Calico for OpenShift.
 
 This page describes how to upgrade to {{version}} for OpenShift 4 from an existing {{prodname}} cluster.
 
-<HostEndpointsUpgrade orch='OpenShift' />
+## Upgrade OwnerReferences
+
+If you do not use OwnerReferences on resources in the projectcalico.org/v3 API group, you can skip this section.
+
+Starting in Calico v3.28, a change in the way UIDs are generated for projectcalico.org/v3 resources requires that you update any OwnerReferences
+that refer to projectcalico.org/v3 resources as an owner. After upgrade, the UID for all projectcalico.org/v3 resources will be changed, resulting in any
+owned resources being garbage collected by Kubernetes.
+
+1. Remove any OwnerReferences from resources in your cluster that have `apiGroup: projectcalico.org/v3`.
+1. Perform the upgrade normally.
+1. Add new OwnerReferences to your resources referencing the new UID.
 
 ## Upgrading Calico on OpenShift 4
 
