--- a/calico/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico/operations/upgrading/kubernetes-upgrade.mdx
@@ -6,7 +6,7 @@ description: Upgrade to a newer version of Calico for Kubernetes.
 
 ## About upgrading {{prodname}}
 
-This page describes how to upgrade to {{version}} from {{prodname}} v3.0 or later. The
+This page describes how to upgrade to {{version}} from {{prodname}} v3.15 or later. The
 procedure varies by datastore type and install method.
 
 If you are using {{prodname}} in etcd mode on a Kubernetes cluster, we recommend upgrading to the Kubernetes API datastore [as discussed here](../datastore-migration.mdx).
@@ -28,7 +28,17 @@ This may result in unexpected behavior and data.
 
 :::
 
-<HostEndpointsUpgrade orch='Kubernetes' />
+## Upgrade OwnerReferences
+
+If you do not use OwnerReferences on resources in the projectcalico.org/v3 API group, you can skip this section.
+
+Starting in Calico v3.28, a change in the way UIDs are generated for projectcalico.org/v3 resources requires that you update any OwnerReferences
+that refer to projectcalico.org/v3 resources as an owner. After upgrade, the UID for all projectcalico.org/v3 resources will be changed, resulting in any
+owned resources being garbage collected by Kubernetes.
+
+1. Remove any OwnerReferences from resources in your cluster that have `apiGroup: projectcalico.org/v3`.
+1. Perform the upgrade normally.
+1. Add new OwnerReferences to your resources referencing the new UID.
 
 ## Upgrading an installation that was installed using helm
 
