Adds RN scaffold

--- a/calico-cloud_versioned_docs/version-19-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/release-notes/index.mdx
@@ -5,6 +5,13 @@ title: Release notes
 
 # Calico Cloud release notes
 
+## April DD, 2024 (version 19.1.0)
+
+### Bug fixes
+
+* Bug 1
+* Bug 2
+
 ## February 28, 2024 (version 19.0.0)
 
 ### New features and enhancements
