CC: Update support location directions

--- a/calico-cloud/get-started/connect/operator-checklist.mdx
+++ b/calico-cloud/get-started/connect/operator-checklist.mdx
@@ -679,6 +679,6 @@ To install an appropriate Prometheus operator, contact Support below.
 
 ## Next step
 
-If you have verified all of the above steps and still have issues, click the chat icon in Manager UI at the bottom of the left nav to get help from Support:
+If you have verified all of the above steps and still have issues, click the question icon in the UI under the user icon in the upper right to get help from Support:
 
 ![contact-support](/img/calico-cloud/contact-support.png)
