configure resource request changes

--- a/calico-enterprise/reference/component-resources/configure-resources.mdx
+++ b/calico-enterprise/reference/component-resources/configure-resources.mdx
@@ -12,11 +12,9 @@ Resource requests and limits are essential configurations for managing resource 
 It's important to note that the CPU and memory values used in the examples are for demonstration purposes and should be adjusted based on individual system requirements.
 :::
 
+## APIServer custom resource
 
-
-## APIServer
-
-The [APIServer](../../reference/installation/api.mdx#operator.tigera.io/v1.APIServer) CR provides a way to configure APIServerDeployment.
+The [APIServer](../../reference/installation/api.mdx#operator.tigera.io/v1.APIServer) CR provides a way to configure APIServerDeployment. The following sections provide example configurations for this CR.
 
 ### APIServerDeployment
 
@@ -28,7 +26,7 @@ apiserver.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -67,9 +65,9 @@ This command will output the configured resource requests and limits for the Cal
 }
 ```
 
-## ApplicationLayer
+## ApplicationLayer custom resource
 
-The [ApplicationLayer](../../reference/installation/api.mdx#operator.tigera.io/v1.ApplicationLayer) CR provides a way to configure resources for L7LogCollectorDaemonSet.
+The [ApplicationLayer](../../reference/installation/api.mdx#operator.tigera.io/v1.ApplicationLayer) CR provides a way to configure resources for L7LogCollectorDaemonSet. The following sections provide example configurations for this CR.
 
 Example Configurations:
 
@@ -83,7 +81,7 @@ applicationlayer.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -123,9 +121,9 @@ This command will output the configured resource requests and limits for the Cal
 ```
 
 
-## Authentication
+## Authentication custom resource
 
-The [Authentication](../../reference/installation/api.mdx#operator.tigera.io/v1.Authentication) CR provides a way to configure resources for DexDeployment.
+The [Authentication](../../reference/installation/api.mdx#operator.tigera.io/v1.Authentication) CR provides a way to configure resources for DexDeployment. The following sections provide example configurations for this CR.
 
 Example Configurations:
 
@@ -139,7 +137,7 @@ authentication.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -166,9 +164,9 @@ This command will output the configured resource requests and limits for the Cal
 ```
 
 
-## Compliance
+## Compliance custom resource
 
-The [Compliance](../../reference/installation/api.mdx#operator.tigera.io/v1.Compliance) CR provides a way to configure resources for ComplianceControllerDeployment, ComplianceSnapshotterDeployment, ComplianceBenchmarkerDaemonSet, ComplianceServerDeployment, ComplianceReporterPodTemplate.
+The [Compliance](../../reference/installation/api.mdx#operator.tigera.io/v1.Compliance) CR provides a way to configure resources for ComplianceControllerDeployment, ComplianceSnapshotterDeployment, ComplianceBenchmarkerDaemonSet, ComplianceServerDeployment, ComplianceReporterPodTemplate. The following sections provide example configurations for this CR.
 
 Example Configurations:
 
@@ -182,7 +180,7 @@ compliance.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -219,7 +217,7 @@ compliance.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -256,7 +254,7 @@ compliance.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -293,7 +291,7 @@ compliance.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -330,7 +328,7 @@ compliance.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -357,9 +355,9 @@ This command will output the configured resource requests and limits for the Com
 ```
 
 
-## Installation CR
+## Installation custom resource
 
-The [Installation CR](../../reference/installation/api.mdx) provides a way to configure resources for various Calico Enterprise components, including TyphaDeployment, calicoNodeDaemonSet, CalicoNodeWindowsDaemonSet, csiNodeDriverDaemonSet and KubeControllersDeployment.
+The [Installation CR](../../reference/installation/api.mdx) provides a way to configure resources for various Calico Enterprise components, including TyphaDeployment, calicoNodeDaemonSet, CalicoNodeWindowsDaemonSet, csiNodeDriverDaemonSet and KubeControllersDeployment. The following sections provide example configurations for this CR.
 
 Example Configurations:
 
@@ -374,7 +372,7 @@ installation.operator.tigera.io/default patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -405,14 +403,13 @@ This command will output the configured resource requests and limits for the Cal
 
 To configure resource requests for the [calicoNodeDaemonSet](../../reference/installation/api.mdx#operator.tigera.io/v1.calicoNodeDaemonSet) component, patch the installation CR using the below command:
 
-
 ```bash
 $ kubectl patch installations default --type=merge --patch='{"spec": {"calicoNodeDaemonSet":{"spec": {"template": {"spec": {"containers":[{"name":"calico-node","resources":{"requests":{"cpu":"100m", "memory":"100Mi"}, "limits":{"cpu":"1", "memory":"1000Mi"}}}]}}}}}}'
 installation.operator.tigera.io/default patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -442,14 +439,13 @@ This command will output the configured resource requests and limits for the Cal
 
 To configure resource requests for the [calicoNodeWindowsDaemonSet](../../reference/installation/api.mdx#operator.tigera.io/v1.calicoNodeWindowsDaemonSet) component, patch the installation CR using the below command:
 
-
 ```bash
 $ kubectl patch installations default --type=merge --patch='{"spec": {"calicoNodeWindowsDaemonSet":{"spec": {"template": {"spec": {"containers":[{"name":"calico-node-windows","resources":{"requests":{"cpu":"100m", "memory":"100Mi"}, "limits":{"cpu":"1", "memory":"1000Mi"}}}]}}}}}}'
 installation.operator.tigera.io/default patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -479,14 +475,13 @@ This command will output the configured resource requests and limits for the Cal
 
 To configure resource requests for the [CalicoKubeControllersDeployment](../../reference/installation/api.mdx#operator.tigera.io/v1.CalicoKubeControllersDeployment) component, patch the installation CR using the below command:
 
-
 ```bash
 $ kubectl patch installations default --type=merge --patch='{"spec": {"calicoKubeControllersDeployment":{"spec": {"template": {"spec": {"containers":[{"name":"calico-kube-controllers","resources":{"requests":{"cpu":"100m", "memory":"100Mi"}, "limits":{"cpu":"1", "memory":"1000Mi"}}}]}}}}}}'
 installation.operator.tigera.io/default patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -513,9 +508,9 @@ This command will output the configured resource requests and limits for the Cal
 
 ```
 
-## IntrusionDetection
+## IntrusionDetection custom resource
 
-The [IntrusionDetection](../../reference/installation/api.mdx#operator.tigera.io/v1.IntrusionDetection) CR provides a way to configure resources for IntrusionDetectionControllerDeployment.
+The [IntrusionDetection](../../reference/installation/api.mdx#operator.tigera.io/v1.IntrusionDetection) CR provides a way to configure resources for IntrusionDetectionControllerDeployment. The following sections provide example configurations for this CR.
 
 ### IntrusionDetectionControllerDeployment.
 
@@ -527,7 +522,7 @@ intrusiondetection.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -566,7 +561,7 @@ This command will output the configured resource requests and limits for the Int
 }
 ```
 
-## LogCollector
+## LogCollector custom resource
 
 The [LogCollector](../../reference/installation/api.mdx#operator.tigera.io/v1.LogCollector) CR provides a way to configure resources for FluentdDaemonSet, EKSLogForwarderDeployment.
 
@@ -580,7 +575,7 @@ logcollector.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -617,7 +612,7 @@ logcollector.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -644,9 +639,9 @@ This command will output the configured resource requests and limits for the EKS
 ```
 
 
-## LogStorage
+## LogStorage custom resource
 
-The [LogStorage](../../reference/installation/api.mdx#operator.tigera.io/v1.LogStorage) CR provides a way to configure resources for ECKOperatorStatefulSet, Kibana, LinseedDeployment, ElasticsearchMetricsDeployment.
+The [LogStorage](../../reference/installation/api.mdx#operator.tigera.io/v1.LogStorage) CR provides a way to configure resources for ECKOperatorStatefulSet, Kibana, LinseedDeployment, ElasticsearchMetricsDeployment. The following sections provide example configurations for this CR.
 
 ### ECKOperatorStatefulSet.
 
@@ -658,7 +653,7 @@ logstorage.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -695,7 +690,7 @@ logstorage.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -732,7 +727,7 @@ logstorage.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -769,7 +764,7 @@ logstorage.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -796,9 +791,9 @@ This command will output the configured resource requests and limits for the Ela
 ```
 
 
-## ManagementClusterConnection
+## ManagementClusterConnection custom resource
 
-The [ManagementClusterConnection](../../reference/installation/api.mdx#operator.tigera.io/v1.ManagementClusterConnection) CR provides a way to configure resources for GuardianDeployment.
+The [ManagementClusterConnection](../../reference/installation/api.mdx#operator.tigera.io/v1.ManagementClusterConnection) CR provides a way to configure resources for GuardianDeployment. The following sections provide example configurations for this CR.
 
 ### GuardianDeployment.
 
@@ -810,7 +805,7 @@ managementclusterconnection.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -833,9 +828,9 @@ This command will output the configured resource requests and limits for the Gua
 }
 ```
 
-## Manager
+## Manager custom resource
 
-The [Manager](../../reference/installation/api.mdx#operator.tigera.io/v1.Manager) CR provides a way to configure resources for GuardianDeployment.
+The [Manager](../../reference/installation/api.mdx#operator.tigera.io/v1.Manager) CR provides a way to configure resources for GuardianDeployment. The following sections provide example configurations for this CR.
 
 ### ManagerDeployment.
 
@@ -847,7 +842,7 @@ managementclusterconnection.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -901,9 +896,9 @@ This command will output the configured resource requests and limits for the Man
 
 
 
-## Monitor
+## Monitor custom resource
 
-The [Monitor](../../reference/installation/api.mdx#operator.tigera.io/v1.Monitor) CR provides a way to configure resources for Prometheus, AlertManager.
+The [Monitor](../../reference/installation/api.mdx#operator.tigera.io/v1.Monitor) CR provides a way to configure resources for Prometheus, AlertManager. The following sections provide example configurations for this CR.
 
 ### Prometheus
 
@@ -949,7 +944,7 @@ monitor.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -1015,7 +1010,7 @@ monitor.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -1059,9 +1054,9 @@ The "config-reloader" container has default resource values set by the AlertMana
 }
 ```
 
-## PolicyRecommendation
+## PolicyRecommendation custom resource
 
-The [PolicyRecommendation](../../reference/installation/api.mdx#operator.tigera.io/v1.PolicyRecommendation) CR provides a way to configure resources for PolicyRecommendation.
+The [PolicyRecommendation](../../reference/installation/api.mdx#operator.tigera.io/v1.PolicyRecommendation) CR provides a way to configure resources for PolicyRecommendation. The following sections provide example configurations for this CR.
 
 ### PolicyRecommendationDeployment.
 
@@ -1073,7 +1068,7 @@ managementclusterconnection.operator.tigera.io/tigera-secure patched
 ```
 This command sets the CPU request to 100 milliCPU (mCPU) and the memory request is set to 100 Mebibytes (MiB) while the CPU limit is set to 1 CPU and the memory limit is set to 1000 Mebibytes (MiB).
 
-Verifying Resources:
+#### Verification
 
 You can verify the configured resources using the following command:
 
@@ -1125,4 +1120,3 @@ This command will output the configured resource requests and limits for the Man
 }
 ```
 
-### ############################
