--- a/calico-cloud_versioned_docs/version-19-1/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/release-notes/index.mdx
@@ -5,12 +5,9 @@ title: Release notes
 
 # Calico Cloud release notes
 
-## April DD, 2024 (version 19.1.0)
+## April 2, 2024 (version 19.1.0)
 
-### Bug fixes
-
-* Bug 1
-* Bug 2
+This release includes bug fixes and enhancements.
 
 ## February 28, 2024 (version 19.0.0)
 
