--- a/calico-cloud_versioned_docs/version-19-1/image-assurance/scanners/registry-scanner.mdx
+++ b/calico-cloud_versioned_docs/version-19-1/image-assurance/scanners/registry-scanner.mdx
@@ -70,7 +70,7 @@ The registry scanner requires authentication to access a registry. Set up creden
 If you have a valid /.docker/config.json, you can also mount this config file on the container while running the registry scanner.
 
 ```bash
-docker run -e ... -v ~/.docker/config.json:/.docker/config.json quay.io/tigera/image-assurance-registry-scanner:{{imageassuranceversion}}
+docker run -e ... -v ~/.docker/config.json:/.docker/config.json quay.io/tigera/image-assurance-registry-scanner:v1.15.3
 ```
 #### Azure required credentials
 
@@ -119,7 +119,7 @@ Example: gcr registry with Docker credentials
 ```bash
 docker run -e REGISTRY=gcr.io -e IMAGE_ASSURANCE_API_URL=https://<clustId>-management.dev.calicocloud.io/bast
  -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -e DOCKER_USERNAME=<username> -e DOCKER_PASSWORD=<password>
- quay.io/tigera/image-assurance-registry-scanner:{{imageassuranceversion}}
+ quay.io/tigera/image-assurance-registry-scanner:v1.15.3
 ```
 
 Example: acr registry with Azure credentials
@@ -127,7 +127,7 @@ Example: acr registry with Azure credentials
 ```bash
 docker run -e REGISTRY=your-org.azurecr.io -e IMAGE_ASSURANCE_API_URL=https://<clustId>-management.dev.calicocloud.io/bast
  -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -e AZURE_CLIENT_ID=<azure-client-id> -e AZURE_CLIENT_SECRET=<azure-client-secret> -e AZURE_TENANT_ID=<azure-tenant-id>
- quay.io/tigera/image-assurance-registry-scanner:{{imageassuranceversion}}
+ quay.io/tigera/image-assurance-registry-scanner:v1.15.3
 ```
 
 Example: ecr registry with AWS credentials
@@ -135,14 +135,14 @@ Example: ecr registry with AWS credentials
 ```bash
 docker run -e REGISTRY=gcr.io -e IMAGE_ASSURANCE_API_URL=https://<clustId>-management.dev.calicocloud.io/bast
  -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -e AWS_ACCESS_KEY_ID=<aws-access-key> -e AWS_SECRET_ACCESS_KEY=<aws-secret-access-key> -e AWS_REGION=<aws-region>
- quay.io/tigera/image-assurance-registry-scanner:{{imageassuranceversion}}
+ quay.io/tigera/image-assurance-registry-scanner:v1.15.3
 ```
 
 Example: run when mounting the dockerfile
 
 ```bash
 docker run -e REGISTRY=gcr.io -e IMAGE_ASSURANCE_API_URL=https://<clustId>-management.dev.calicocloud.io/bast
- -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -v ~/.docker/config.json/:/.docker/config.json quay.io/tigera/image-assurance-registry-scanner:{{imageassuranceversion}}
+ -e IMAGE_ASSURANCE_API_TOKEN=$TOKEN -v ~/.docker/config.json/:/.docker/config.json quay.io/tigera/image-assurance-registry-scanner:v1.15.3
 ```
 
 ### Troubleshoot
