--- a/calico/networking/ipam/migrate-pools.mdx
+++ b/calico/networking/ipam/migrate-pools.mdx
@@ -112,7 +112,7 @@ test-pool             2024-03-28T18:30:15Z
 
 ### Step 2: Disable the old IP pool
 
-Edit the `default` Installation, and modify the **default-ipv4-ippool** such that it no longer selects
+Edit the `default` installation, and modify `default-ipv4-ippool` so it no longer selects
 any nodes. This prevents IP allocation from the pool.
 
 ```
