--- a/calico/networking/ipam/ippools.mdx
+++ b/calico/networking/ipam/ippools.mdx
@@ -22,7 +22,7 @@ Sometimes you may want to configure additional IP pools. For example:
 <Tabs>
 <TabItem label="Operator" value="Operator-0">
 
-You can edit the **Installation** resource within `custom-resources.yaml` to include multiple unique IP pools. The following
+You can edit the Installation resource within `custom-resources.yaml` to include multiple unique IP pools. The following
 example creates two IP pools assigned to different sets of nodes.
 
 ```
@@ -42,9 +42,9 @@ spec:
     nodeSelector: "zone == 'zone-2'"
 ```
 
-After installing {{prodname}}, you can confirm the IP pools were created using the following command:
+After installing {{prodname}}, you can confirm the IP pools were created by using the following command:
 
-```
+```bash
 kubectl get ippools
 ```
 
