Apply suggestions from code review
Co-authored-by: Christopher Tauchen <tauchen@gmail.com>

--- a/calico/networking/ipam/ippools.mdx
+++ b/calico/networking/ipam/ippools.mdx
@@ -54,7 +54,7 @@ In some cases, you may want to disable IP pool management within the operator an
 create and delete IP pools. To do this, you can edit the **Installation** resource with `custom-resources.yaml` to specify
 an empty list of IP pools.
 
-```
+```yaml
 apiVersion: operator.tigera.io/v1
 kind: Installation
 metadata:
@@ -73,12 +73,10 @@ creation of the default IP pool before doing so.
 
 1. Disable the default IP pool by adding the following environment variable to the calico-node DaemonSet in `calico.yaml`.
 
-  ```
-  env:
-  - name: NO_DEFAULT_POOLS
-    value: "true"
-  ```
-
+   ```yaml
+   env:
+   - name: NO_DEFAULT_POOLS
+      value: "true"
 1. Then, install `calico.yaml`.
 
 1. Create the desired IP pools. For example, the following commands create two IP pools assigned to different sets of nodes.
