--- a/calico/networking/ipam/migrate-pools.mdx
+++ b/calico/networking/ipam/migrate-pools.mdx
@@ -75,7 +75,7 @@ Kubernetes cluster CIDR. Let's change the CIDR to **10.0.0.0/16**, which for the
 <Tabs>
 <TabItem label="Operator" value="Operator-0">
 
-Let’s run `kubectl get ippools` to see the IP pool, **default-ipv4-ippool**.
+Let’s run `kubectl get ippools` to see the IP pool `default-ipv4-ippool`.
 
 ```
 NAME                  CREATED AT
@@ -84,15 +84,15 @@ default-ipv4-ippool   2024-03-28T16:14:28Z
 
 ### Step 1: Add a new IP pool
 
-We add a new **IPPool** with the CIDR range, **10.0.0.0/16**.
+We add a new `IPPool` resource with the CIDR range `10.0.0.0/16`.
 
-Add the following to your `default` Installation, below the existing IP pool.
+Add the following to your `default` installation, below the existing IP pool.
 
-```
+```bash
 kubectl edit installation default
 ```
 
-```
+```bash
 - name: new-ipv4-pool
   cidr: 10.0.0.0/16
   encapsulation: IPIP
@@ -115,7 +115,7 @@ test-pool             2024-03-28T18:30:15Z
 Edit the `default` installation, and modify `default-ipv4-ippool` so it no longer selects
 any nodes. This prevents IP allocation from the pool.
 
-```
+```bash
 kubectl edit installation default
 ```
 
@@ -139,7 +139,7 @@ Remember, disabling a pool only affects new IP allocations; networking for exist
 
 ### Step 3: Delete pods from the old IP pool
 
-Next, we delete all of the existing pods from the old IP pool. (In our example, **coredns** is our only pod; for multiple pods you would trigger a deletion for all pods in the cluster.)
+Next, we delete all of the existing pods from the old IP pool. (In our example, `coredns` is our only pod; for multiple pods you would trigger a deletion for all pods in the cluster.)
 
 ```bash
 kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
@@ -165,7 +165,7 @@ kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
    kubectl -n ippool-test get pods -l app=nginx -o wide
    ```
 
-1. Clean up the ippool-test namespace.
+1. Clean up the `ippool-test` namespace.
 
    ```bash
    kubectl delete ns ippool-test
@@ -174,7 +174,7 @@ kubectl delete pod -n kube-system coredns-6f4fd4bdf-8q7zp
 ### Step 5: Delete the old IP pool
 
 Now that you've verified that pods are getting IPs from the new range, you can safely delete the old pool. To do this,
-remove it from the default `Installation`, leaving only the newly create IP pool.
+remove it from the default installation, leaving only the newly create IP pool.
 
 </TabItem>
 <TabItem label="Manifest" value="Manifest-1">
