Additional code review fixes

--- a/calico/networking/ipam/migrate-pools.mdx
+++ b/calico/networking/ipam/migrate-pools.mdx
@@ -119,7 +119,7 @@ any nodes. This prevents IP allocation from the pool.
 kubectl edit installation default
 ```
 
-```
+```yaml
 - name: 192.168.0.0-16
   allowedUses:
   - Workload
