--- a/calico/networking/ipam/ippools.mdx
+++ b/calico/networking/ipam/ippools.mdx
@@ -25,7 +25,7 @@ Sometimes you may want to configure additional IP pools. For example:
 You can edit the Installation resource within `custom-resources.yaml` to include multiple unique IP pools. The following
 example creates two IP pools assigned to different sets of nodes.
 
-```
+```yaml
 apiVersion: operator.tigera.io/v1
 kind: Installation
 metadata:
@@ -50,7 +50,7 @@ kubectl get ippools
 
 ## Prevent the operator from managing IP pools
 
-In some cases, you may want to disable IP pool management within the operator and instead use **calicoctl** or **kubectl** to
+In some cases, you may want to disable IP pool management within the operator and instead use calicoctl or kubectl to
 create and delete IP pools. To do this, you can edit the **Installation** resource with `custom-resources.yaml` to specify
 an empty list of IP pools.
 
@@ -68,7 +68,7 @@ With this configuration, the operator will wait for you to create IP pools befor
 </TabItem>
 <TabItem label="Manifest" value="Manifest-1">
 
-When using manifests to install {{prodname}}, you can use **calicoctl** to manage multiple IP pools. For complete control, you can disable
+When using manifests to install {{prodname}}, you can use calicoctl to manage multiple IP pools. For complete control, you can disable
 creation of the default IP pool before doing so.
 
 1. Disable the default IP pool by adding the following environment variable to the calico-node DaemonSet in `calico.yaml`.
@@ -77,37 +77,39 @@ creation of the default IP pool before doing so.
    env:
    - name: NO_DEFAULT_POOLS
       value: "true"
+  ```
+
 1. Then, install `calico.yaml`.
 
 1. Create the desired IP pools. For example, the following commands create two IP pools assigned to different sets of nodes.
 
-  ```bash
-  calicoctl create -f -<<EOF
-  apiVersion: projectcalico.org/v3
-  kind: IPPool
-  metadata:
-    name: pool-zone-1
-  spec:
-    cidr: 192.168.0.0/24
-    vxlanMode: Always
-    natOutgoing: true
-    nodeSelector: zone == "zone-1"
-  EOF
-  ```
+   ```bash
+   calicoctl create -f -<<EOF
+   apiVersion: projectcalico.org/v3
+   kind: IPPool
+   metadata:
+     name: pool-zone-1
+   spec:
+     cidr: 192.168.0.0/24
+     vxlanMode: Always
+     natOutgoing: true
+     nodeSelector: zone == "zone-1"
+   EOF
+   ```
 
-  ```bash
-  calicoctl create -f -<<EOF
-  apiVersion: projectcalico.org/v3
-  kind: IPPool
-  metadata:
-    name: pool-zone-2
-  spec:
-    cidr: 192.168.1.0/24
-    vxlanMode: Always
-    natOutgoing: true
-    nodeSelector: zone == "zone-2"
-  EOF
-  ```
+   ```bash
+   calicoctl create -f -<<EOF
+   apiVersion: projectcalico.org/v3
+   kind: IPPool
+   metadata:
+     name: pool-zone-2
+   spec:
+     cidr: 192.168.1.0/24
+     vxlanMode: Always
+     natOutgoing: true
+     nodeSelector: zone == "zone-2"
+   EOF
+   ```
 
 </TabItem>
 </Tabs>
