Update examples for namespaced resources

--- a/calico-enterprise/reference/resources/networkpolicy.mdx
+++ b/calico-enterprise/reference/resources/networkpolicy.mdx
@@ -182,18 +182,18 @@ When no selector is specified, the API server returns all `NetworkPolicy` resour
 
 When using the field selector, supported operators are `=` and `==`
 
-The following example shows how to retrieve all `NetworkPolicy` resources in the default tier:
+The following example shows how to retrieve all `NetworkPolicy` resources in the default tier and in all namespaces:
 
 ```bash
-kubectl get networkpolicy.p --field-selector spec.tier=default
+kubectl get networkpolicy.p --field-selector spec.tier=default --all-namespaces
 ```
 
 ##### Label selector
 
 When using the label selector, supported operators are `=`, `==` and `IN`.
 
-The following example shows how to retrieve all `NetworkPolicy` resources in the `default` and `net-sec` tiers:
+The following example shows how to retrieve all `NetworkPolicy` resources in the `default` and `net-sec` tiers and in all namespaces:
 
 ```bash
-kubectl get networkpolicy.p -l 'projectcalico.org/tier in (default, net-sec)'
+kubectl get networkpolicy.p -l 'projectcalico.org/tier in (default, net-sec)' --all-namespaces
 ```
