--- a/calico-enterprise/reference/resources/stagednetworkpolicy.mdx
+++ b/calico-enterprise/reference/resources/stagednetworkpolicy.mdx
@@ -154,18 +154,18 @@ When no selector is specified, the API server returns all `StagedNetworkPolicy` 
 
 When using the field selector, supported operators are `=` and `==`
 
-The following example shows how to retrieve all `StagedNetworkPolicy` resources in the default tier:
+The following example shows how to retrieve all `StagedNetworkPolicy` resources in the default tier and in all namespaces:
 
 ```bash
-kubectl get stagednetworkpolicy.p --field-selector spec.tier=default
+kubectl get stagednetworkpolicy.p --field-selector spec.tier=default --all-namespaces
 ```
 
 ##### Label selector
 
 When using the label selector, supported operators are `=`, `==` and `IN`.
 
-The following example shows how to retrieve all `StagedNetworkPolicy` resources in the `default` and `net-sec` tiers:
+The following example shows how to retrieve all `StagedNetworkPolicy` resources in the `default` and `net-sec` tiers and in all namespaces:
 
 ```bash
-kubectl get stagednetworkpolicy.p -l 'projectcalico.org/tier in (default, net-sec)'
+kubectl get stagednetworkpolicy.p -l 'projectcalico.org/tier in (default, net-sec)' --all-namespaces
 ```
