Docs updates for IA exceptions

--- a/calico-cloud/image-assurance/understanding-scan-results.mdx
+++ b/calico-cloud/image-assurance/understanding-scan-results.mdx
@@ -25,7 +25,7 @@ If you are using the CLI scanner and your cluster does not use the default conta
 ```bash
 kubectl patch imageassurance default --type='merge' -p '{"spec":{"criSocketPath":"<path-to-cri-socket>"}}'
 ```
-For details, see [Image Assurance installation reference](../reference/installation/api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec).
+For details, see the [Image Assurance installation reference](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec).
 
 :::
 
@@ -34,6 +34,7 @@ Other notes:
 - The columns, **Clusters** and **Running Instances**, show the number of running instances in clusters that are connected to {{prodname}}.
 - The **Unknown** scan result filter reflects images that are not fully scanned. Because they can add noise to the table, they are disabled by default. To enable Unknown results for strategic troubleshooting, click the **Result** drop-down menu and select **Unknown**.
 - In the All Scanned Images and Running Images tabs, the **Registry path** field may be blank if {{prodname}} cannot access this metadata. For example, images from Docker Hub do not specify the registry in the image metadata.
+- Any exceptions configured for image scanning will be applicable to Runtime View as well. 
 
 ## Image assessment: Pass, Warn, and Fail
 
