--- a/calico-cloud/image-assurance/scanners/cluster-scanner.mdx
+++ b/calico-cloud/image-assurance/scanners/cluster-scanner.mdx
@@ -53,7 +53,7 @@ Vulnerability detection consists of these steps:
 
 Complete the following steps for each managed cluster you want enabled with the cluster scanner:
 
-1. Modify the `imageassurance` installation resource.
+1. Modify the [Image Assurance](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource.
 
 ```bash
    kubectl edit imageassurance default
@@ -69,7 +69,7 @@ That’s it. The cluster scanner will start scanning images on running pods in t
 
 ### Customize scanner settings
 
-To change default settings, modify the `imageassurance` installation resource.
+To change default settings, modify the [Image Assurance](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource.
 
 - Container runtime socket path
 
@@ -78,6 +78,34 @@ To change default settings, modify the `imageassurance` installation resource.
 - Containerd file system root path
 
     Set the `containerdVolumeMountPath`. Default: `/var/lib/containerd/`.
+
+### Configure exclusions for image scanning
+
+To specify which namespaces should be excluded from future scans, follow the following steps.
+
+- Modify your [Image Assurance](../reference/installation/ia-api.mdx#image-assurance.operator.tigera.io/v1.ImageAssuranceSpec) installation resource to include the `exclusions.namespaces` field. List each namespace you want to exclude.
+
+
+```yaml
+apiVersion: image-assurance.operator.tigera.io/v1
+kind: ImageAssurance
+metadata:
+  name: default
+spec:
+  clusterScanner: Enabled
+  exclusions:
+    namespaces:
+      - "kube-system"
+      - "dev-qa"
+```
+
+In this example, the workloads in the `kube-system` and `dev-qa` namespaces are excluded from future image scans. 
+
+:::note
+
+Applying or updating namespace exclusions affects only future scans. Results from scans conducted prior to these exclusions will remain unchanged. The exclusions configured will apply to both cluster scanner and runtime view (**Running Images** tab).
+
+:::
 
 ### Disable scanner
 
