--- a/calico-cloud/get-help/support.mdx
+++ b/calico-cloud/get-help/support.mdx
@@ -6,9 +6,17 @@ description: Ways to get help and provide feedback.
 
 ## Contact Support
 
-Before opening a support ticket, review this checklist of basic [troubleshooting](../get-started/connect/checklist.mdx).
+You can find solutions to many common problems by following our [troubleshooting checklist](../get-started/connect/checklist.mdx) or by consulting the [Tigera Help Center](https://www.tigera.io/calico-support/).
 
-If you still need help, you can consult the knowledge base at the [Tigera Help Center](https://www.tigera.io/calico-support/) or visit the [support portal](https://tigeraio.my.site.com/community/s/login/) to open a ticket.
+For everything else, you can open a support ticket.
+
+### Paid Calico Cloud users
+
+Sign in to the [support portal](https://tigeraio.my.site.com/community/s/login/) to open a ticket.
+
+### Free trial users 
+
+From the Manager UI, click the user icon <IconUser width="20"/> > **Contact Support**, and then complete the form.
 
 ## Provide feedback
 
